--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -14,9 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Melanoma Classifier\n",
     "\n",
-    "> Summary description here."
+    "> My submission to the Kaggle SIIM-ISIC Melanoma Classification competition (https://www.kaggle.com/c/siim-isic-melanoma-classification/overview), built into a usable python module! Created using Fast.ai's nbdev!"
    ]
   },
   {
@@ -37,7 +37,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "Currently under development, but once it is done, install with:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install melanoma_classifier`"
    ]
   },
   {
@@ -73,13 +80,6 @@
    "source": [
     "1+1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -90,5 +90,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
