Refactor and start new experiment

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -23,9 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#export\n",
     "from nbdev.showdoc import *\n",
-    "from fastai.medical.imaging import *"
+    "from fastai.medical.imaging import *\n",
+    "from fastai.vision.all import *"
    ]
   },
   {
@@ -420,27 +421,8 @@
     }
    ],
    "source": [
+    "#hide\n",
     "df_train.describe(include='all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "583.0176"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "33126*0.0176"
    ]
   },
   {
@@ -490,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test.head();"
+    "df_test.head()"
    ]
   },
   {
@@ -499,6 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "df_test.describe(include='all');"
    ]
   },
@@ -613,27 +596,8 @@
     }
    ],
    "source": [
+    "#hide\n",
     "f.dcmread()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ISIC_2108457'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f.stem"
    ]
   },
   {
@@ -695,7 +659,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def get_x(r): return path_images/f'{str(r[\"image_name\"])}.dcm'\n",
+    "def get_x(r, path_images=None): return path_images/f'{str(r[\"image_name\"])}.dcm'\n",
     "def get_y(r): return r['benign_malignant']"
    ]
   },
@@ -771,6 +735,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "patient_ids = df_train['patient_id'].unique()\n",
     "patient_ids.shape, patient_ids[:5]"
    ]
@@ -794,6 +759,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "iteration_idxs = np.random.choice(patient_ids, 5, replace=False)\n",
     "iteration_idxs.shape, iteration_idxs"
    ]
@@ -812,6 +778,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "%timeit df_train.index[df_train['patient_id'].isin(iteration_idxs)]"
    ]
   },
@@ -829,6 +796,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "%timeit np.where(df_train['patient_id'].isin(iteration_idxs))[0]"
    ]
   },
@@ -859,6 +827,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "df_train[df_train['patient_id'].isin(iteration_idxs)].index.values"
    ]
   },
@@ -871,37 +840,16 @@
     "#export\n",
     "def patient_id_splitter(df, val_pct, iteration_set_num_patients, seed):\n",
     "    \"\"\"Split images by patient_id, using subset of total data if desired.\n",
-    "    \n",
+    "\n",
     "    If no value for 'iteration_set_num_patients' is passed, entire dataset is used.\n",
     "    \"\"\"\n",
     "    np.random.seed(seed)\n",
-    "    patient_ids = df_train['patient_id'].unique()\n",
+    "    patient_ids = df['patient_id'].unique()\n",
     "    if iteration_set_num_patients is not None: patient_ids = np.random.choice(patient_ids, iteration_set_num_patients, replace=False)\n",
     "    split_idx = int(len(patient_ids)*val_pct)\n",
     "    train = df[df['patient_id'].isin(patient_ids[split_idx:])].index.values\n",
     "    valid = df[df['patient_id'].isin(patient_ids[:split_idx])].index.values\n",
     "    return train, valid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((21759,), (11367,))"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train, valid = patient_id_splitter(df_train, 0.2)\n",
-    "train.shape, valid.shape"
    ]
   },
   {
@@ -922,6 +870,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "df_train.iloc[train]['patient_id'].unique()"
    ]
   },
@@ -942,8 +891,9 @@
     }
    ],
    "source": [
+    "#hide\n",
     "train_patients, valid_patients = patient_id_splitter(df_train, 0.2, 100, 6)\n",
-    "df_train.iloc[train_patients]['target'].mean(), df_train.iloc[valid_patients]['target'].mean()"
+    "df_train.iloc[train_patients]['target'].mean(), df_train.iloc[valid_patients]['target'].mean(), train.shape, valid.shape"
    ]
   },
   {
@@ -960,10 +910,10 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def build_DataBlock(val_pct=0.2, seed=42, iteration_set_num_patients=None):\n",
+    "def build_DataBlock(path_images, val_pct=0.2, seed=42, iteration_set_num_patients=None):\n",
     "    \"\"\"Builds DataBlock for benign/malignant classification of DICOM images of moles, for melanoma.\"\"\"\n",
     "    return DataBlock(blocks=(ImageBlock(cls=PILDicom), CategoryBlock(vocab=vocab)),\n",
-    "                    get_x=get_x, get_y=get_y,\n",
+    "                    get_x=partial(get_x, path_images=path_images), get_y=get_y,\n",
     "                    splitter=partial(patient_id_splitter, val_pct=val_pct, iteration_set_num_patients=iteration_set_num_patients, seed=seed))"
    ]
   },
@@ -974,26 +924,7 @@
    "outputs": [],
    "source": [
     "data = build_DataBlock(iteration_set_num_patients=10)\n",
-    "ds = data.datasets(df_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(172, 66)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "ds = data.datasets(df_train)\n",
     "len(ds.train), len(ds.valid)"
    ]
   },
@@ -1075,7 +1006,7 @@
    ],
    "source": [
     "dls = proc_data.dataloaders(df_train)\n",
-    "dls, len(dls.train), len(dls.valid), dls.c"
+    "len(dls.train), len(dls.valid), dls.c"
    ]
   },
   {
@@ -1199,6 +1130,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "learn.loss_func"
    ]
   },
@@ -1397,13 +1329,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Confusion matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1423,13 +1348,6 @@
    ],
    "source": [
     "interp.plot_confusion_matrix()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Top Losses"
    ]
   },
   {
@@ -1505,34 +1423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = learn.get_preds(dl=test_dl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((tensor([[0.9030, 0.0970],\n",
-       "          [0.9283, 0.0717],\n",
-       "          [0.8740, 0.1260],\n",
-       "          ...,\n",
-       "          [0.8715, 0.1285],\n",
-       "          [0.7803, 0.2197],\n",
-       "          [0.9313, 0.0687]]),\n",
-       "  None),\n",
-       " torch.Size([10982, 2]))"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "output = learn.get_preds(dl=test_dl)\n",
     "output, output[0].shape"
    ]
   },
@@ -1555,26 +1446,6 @@
    "source": [
     "preds = output[0].argmax(dim=1)\n",
     "preds.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<fastai.data.core.TfmdDL at 0x7f607e543e50>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "learn.dls.test_dl(df_test)"
    ]
   },
   {
@@ -1658,6 +1529,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "preds.nonzero()[:5]"
    ]
   },
@@ -1690,6 +1562,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "test_dl.dataset[41][0].show()"
    ]
   },
@@ -1717,6 +1590,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "(df_test.image_name == ss.image_name).all()"
    ]
   },
@@ -1911,7 +1785,7 @@
     "#export \n",
     "def create_submission_csv(path, preds):\n",
     "    \"\"\"Saves submission.csv.\n",
-    "    \n",
+    "\n",
     "    Assumes order of preds is save as order of images in sample_submission.csv.\n",
     "    \"\"\"\n",
     "    submission = pd.read_csv(path/'sample_submission.csv')\n",
