Fix submission csv error

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -1459,7 +1459,7 @@
     "    \"\"\"Generates predictions and formats them for submission file.\"\"\"\n",
     "    test_dl = learn.dls.test_dl(pd.read_csv(path_to_test_csv))\n",
     "    probs = learn.get_preds(dl=test_dl)[0]\n",
-    "    return probs.argmax(dim=1)"
+    "    return probs[1] # Return prob of target class"
    ]
   },
   {
